--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -8,7 +8,7 @@
     <title>{% block title %}Administração{% endblock %} - Gestão de Pontos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'gestao/admin_custom.css' %}">
-    <link rel="stylesheet" href="{% static 'gestao/css/tables.css' %}">
+    <link rel="stylesheet" href="{% static 'gestao/css/Painel.css' %}">
     {% block extra_head %}{% endblock %}
 </head>
 <body class="bg-gray-100 text-black flex" style="font-family: 'Open Sans', sans-serif;">
