--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -68,7 +68,7 @@
         </section>
     </main>
     {% block extra_body %}{% endblock %}
-    <script src="{% static 'gestao/js/admin_layout.js' %}"></script>
+    <script src="{% static 'gestao/js/admin_layout.js' %}" defer></script>
 </body>
 </html>
 
