--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -19,8 +19,8 @@
     {% endif %}
     <form method="POST">
       {% csrf_token %}
-      <label for="username">Usuário/CPF</label>
-      <input type="text" id="username" name="identifier" placeholder="Digite seu usuário" required />
+      <label for="username">CPF</label>
+      <input type="text" id="username" name="identifier" placeholder="Digite seu CPF" required />
       <label for="password">Senha</label>
       <input type="password" id="password" name="password" placeholder="Digite sua senha" required />
       <label for="perfil">Tipo de Acesso</label>
