--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -74,5 +74,6 @@
     </main>
     {% block extra_body %}{% endblock %}
     <script src="{% static 'gestao/js/admin_layout.js' %}" defer></script>
+    <script src="{% static 'gestao/js/forms.js' %}" defer></script>
 </body>
 </html>
