--- a/gestao/templates/admin_custom/contas.html
+++ b/gestao/templates/admin_custom/contas.html
@@ -27,8 +27,7 @@
             {% for conta in page_obj %}
             <tr class="border-b border-zinc-700">
                 <td class="p-2">
-                    
-                    {{ conta.cliente.usuario.username }}
+                    {{ conta.cliente.usuario.get_full_name|default:conta.cliente.usuario.username }}
                 </td>
                 <td class="p-2">{{ conta.programa.nome }}</td>
                 <td class="p-2">{{ conta.saldo_pontos }}</td>
