--- a/gestao/templates/admin_custom/programas_do_cliente.html
+++ b/gestao/templates/admin_custom/programas_do_cliente.html
@@ -1,6 +1,6 @@
 {% extends "admin_custom/base_admin.html" %}
-{% block title %}Programas de {{ cliente.nome }}{% endblock %}
-{% block header_title %}Programas de {{ cliente.nome }}{% endblock %}
+{% block title %}Programas de Fidelidade de {{ cliente.usuario.get_full_name|default:cliente.usuario.username }}{% endblock %}
+{% block header_title %}Programas de Fidelidade de {{ cliente.usuario.get_full_name|default:cliente.usuario.username }}{% endblock %}
 
 {% block content %}
     <table class="min-w-full text-sm">
