--- a/painel_cliente/templates/painel_cliente/base_painel.html
+++ b/painel_cliente/templates/painel_cliente/base_painel.html
@@ -12,6 +12,7 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
+    <script src="{% static 'gestao/js/forms.js' %}" defer></script>
     {% block extra_js %}{% endblock %}
 </body>
 </html>
